# agents-study

./: .gitignore  README.md  main.py  pyproject.toml
.github/instructions/: general-coding.instructions.md
async_python/: chat.py  main.py
crew_ai/coder/: pyproject.toml
crew_ai/coder/src/coder/: crew.py  main.py
crew_ai/debate/: pyproject.toml
crew_ai/debate/src/debate/: crew.py  main.py
crew_ai/engineering_team/: .gitignore  pyproject.toml
crew_ai/engineering_team/src/engineering_team/: crew.py  main.py
crew_ai/financial_researcher/: pyproject.toml
crew_ai/stock_picker/: .gitignore  pyproject.toml
crew_ai/stock_picker/src/stock_picker/: crew.py  main.py
curriculum_agent/: README.md  agent.py  chat.py  evaluation.py  evaluator.py  file_reader.py  main.py  openai_provider.py  rag.py
curriculum_agent/agents/: agent.py
curriculum_agent/application/: api.py  chat.py  db.py  openai_provider.py  rag.py
curriculum_agent/base_agents/: agent.py  evaluator.py
curriculum_agent/data/: summary.txt
curriculum_agent/domain/: agent.py  evaluator.py
game_recomender_agent/: deep_research.py
game_recomender_agent/custom_agents/: game_recomender_agent.py  mailer_agent.py
game_recomender_agent/tools/: question_generator.py  search_performer.py  search_planner.py
game_recommender_agent/: README.md  deep_research.py
game_recommender_agent/custom_agents/: mailer_agent.py  planner_agent.py  question_generator_agent.py  searcher_agent.py  writer_agent.py
game_recommender_agent/tools/: report_writer.py  send_mail.py
simple-mcp-server/: main.py  server.py
(+9 files in other folders)
