[project]
name = "agents_study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "crewai>=0.152.0",
    "dotenv>=0.9.9",
    "fastmcp>=2.12.2",
    "gradio>=5.38.2",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.31",
    "langchain-text-splitters>=0.3.9",
    "openai>=1.97.1",
    "openai-agents>=0.2.4",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
]
